# charms-multisig-poc

./: .gitignore  README.md  boilerplate.py  docker-compose.yaml  main.py  mint_nft_regtest.sh  mint_nft_regtest_multisig_no_psbt.py  mint_nft_regtest_multisig_psbt.py  mint_nft_testnet4.sh  requirements.txt
my-token/: Cargo.toml  README.md  debug_prover.sh  mint_nft.sh  prove_request.json
my-token/spells/: mint-nft.yaml  mint-token.yaml  send.yaml
my-token/src/: lib.rs  main.rs
poc/: bitcoin_wallet.py  harness.py  rpc.py  taproot_multisig.py
