[package]
name = "my-token"
description = "A simple Charms app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
charms-sdk = { version = "0.5.4" }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.8" }

[profile.release]
lto = "fat"
opt-level = "s"
strip = "symbols"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
